[gd_scene load_steps=2 format=3 uid="uid://df2sws2pog4b"]

[ext_resource type="Script" uid="uid://b7sfhecl4vr2n" path="res://scenes/MultiplayerControler.gd" id="1_5p55f"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 1.0
offset_right = -2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5p55f")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 12.0
offset_right = 129.0
offset_bottom = 44.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 141.0
offset_top = 11.0
offset_right = 235.0
offset_bottom = 43.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 17.0
offset_right = 352.0
offset_bottom = 49.0
text = "Start Game
"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
